# telegram

./: .env.example  .gitignore  README.md  com.tranks.telegram-news.plist  pyproject.toml
docs/: server.md
scripts/: auth.py  run.py  test_crawl.py  test_read.py
src/: config.py  link_extractor.py  main.py  state.py  summarizer.py  telegram_reader.py  telegram_sender.py
src/crawlers/: article.py  base.py  router.py  twitter.py
src/prompts/: summary.txt
